--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
+    "graphql": "^16.8.1",
+    "html-to-image": "^1.11.11",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
