--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
+    "@bradgarropy/next-google-analytics": "^1.0.2",
     "graphql": "^16.8.1",
     "html-to-image": "^1.11.11",
     "next": "14.0.3",
