--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@apollo/client": "^3.8.8",
     "@bradgarropy/next-google-analytics": "^1.0.2",
+    "chart.js": "^4.4.1",
     "graphql": "^16.8.1",
     "html-to-image": "^1.11.11",
     "next": "14.0.3",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
   },
