--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.8",
     "@bradgarropy/next-google-analytics": "^1.0.2",
+    "@google/generative-ai": "^0.2.1",
     "chart.js": "^4.4.1",
     "graphql": "^16.8.1",
     "html-to-image": "^1.11.11",
@@ -19,7 +20,8 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
